# proyecto_final_uvm

./: README.md  app.css  app.js  corte.html  corte.js  corteFake.json  corteanterior.html  corteanterior.js  cortes.css  index.html  package-lock.json  package.json
backend-apppyro/: main.py  models.py  pyproject.toml  service.py
css/: cerrar_sesion.css  cortes.css  main.css
js/: app.js  corte.js  corteanterior.js
pages/: cerrar_sesion.html  corte.html  corteanterior.html
